2004-02-16 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b36

	* Change: Config Wizard is global $GALLERY_BASEDIR free.

	* Bugfix: Correct one missing gallery_validate_email rename.

	* Change: Move checkVersions from util.php into settup/functions.inc

	* Change: Added GPL / Copyright to setup/* files.

2004-02-14 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b35

	* Change: Renamed validate_email() in gallery_validate_email()
		  to avoid problems with PNphpBB2 integration.

2004-02-12  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b34

	* Simplified and strengthened the hack checks in slideshow.php, on
	  Bharat's advice.

2004-02-11  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b33

	* Reverted Christian "fix" to remove a cmd.exe invocation: it failed
	  on my machine.

2004-02-11  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b32

	* Fixed Gallery-wide hack check, fixed gallery-wide recursion for
	  applet slideshow.

2004-02-11 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b31

	* New: Added Check for correct working __FILE__ in Config Wizard Step1.

2004-02-11 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b30
	
	* Bugfix: Gallery wide Slideshow were broken.

	* Change: Adjust filelist for translation.

2004-02-10  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b29

	* Made the slideshow.php page modular by selectively incuding either the
	  applet, high or low version. Also better homogeneity between high and
	  low versions.
	* Introduced a cookie that keeps the user's preference for which slideshow
	  to use.
	* Added support in the slideshow applet for honoring settings for number
	  of images, randomness and recursiveness.

	High regression potential, please test slideshow intensively.

2004-02-11 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b28

	* Bugfix: Fixed a quoting bug which causes a Javascript error in some popps.
		  This Bug was reintroduced with my phpBB2 merges in 1.4.3-cvs-b2.
