@@ -1,3 +1,7 @@
+2004-02-17 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b37
+
+	* Change: Adjust secure.sh and config.sh to fit with Debian.
+
 2004-02-16 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b36
 
 	* Change: Config Wizard is global $GALLERY_BASEDIR free.
